# autograder

./: .gitignore  Dockerfile  Readme.md  dev.ipynb  entrypoint.sh  generate_offline_json.py  pyproject.toml  requirements.txt  test.sh  test_code.json  test_code_llm.json  test_get_problem.sh
dev_scripts/: test_code.json
kubernetes/: Readme.md  block-internet-access.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  server-deployment.yaml  server-role-binding.yaml  server-role.yaml  testrunner-job.yaml
kubernetes/efk/: Readme.md  elasticsearch.yaml  es-config.yaml  fluentd.yaml  kibana.yaml  pv.yaml
src/: grader.py  models.py  server.py
src/clients/: data_client.py  llm_client.py  problem_data_client.py  testrunner_client.py
src/clients/templates/: prompt_templates.toml
src/data/: sort.md  union_find.md
src/models/: test_result.py
testrunner/: Dockerfile  entrypoint.py
tests/: test_definition_schema.py  test_llm_client.py  test_problem_client.py
