[tool.poetry]
name = "autograder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
kubernetes = "^28.1.0"
requests = "^2.31.0"
shared = { path = "../shared", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]